# pool_controller

./: .gitignore  AGENTS.md  Cargo.toml  LICENSE  Makefile  README.md  rust-toolchain.toml  rustfmt.toml
.cargo/: config.toml
deploy/: README.md  config.txt  deploy.sh  journald-rs-pool.conf  local.env.example  rs-pool.env  rs-pool.service  rs-pool.toml
src/: app.rs  config.rs  health.rs  log_buffer.rs  main.rs  mqtt.rs  persist.rs  state.rs
src/http/: dashboard.html  mod.rs
src/modbus/: crc.rs  mod.rs  pump.rs  relay.rs  rtu.rs
src/temp/: ads.rs  convert.rs  mod.rs
